# mip_procure

./: .gitignore  setup.cfg
docs/: mip_procure_formulation.ipynb
mip_procure/: __init__.py  action_update_packing_cost.py  constants.py  data_bridge.py  data_preparation.py  main.py  opt_model.py  schemas.py  utils.py
test_mip_procure/: data_preparation.py  execute_locally.py  model.lp  test_local_execution.py  utils.py
test_mip_procure/data/outputs/: Output.xlsx
test_mip_procure/data/testing_data/: validation_data.xlsx
