[metadata]
name = mip_procure
version = attr: mip_procure.__version__
author = Gabriel Michels and Luiz Suzana
author_email = gabrielsehnem.15@gmail.com
description = Problem for learn optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gabriel-Michels/mip_procure.git
project_urls =
    Bug Tracker = https://github.com/Gabriel-Michels/mip_procure.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mip_procure
install_requires =
    ticdat>=0.2.24
    pandas>=2.2.2
    pulp>=2.8.0
python_requires = >=3.12